--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -5,3 +5,52 @@
     flex-basis: 0 !important ;
     text-align: right !important ;
 }
+ul.navbar-nav {
+    display: block;
+}
+ul.navbar-nav li {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.col-lg-4 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 73.333333%;
+    border: 1px solid rebeccapurple;
+    margin: auto;
+    background-color: #e9ecef;
+    border-radius: 4px;
+    padding: 0;
+}
+
+h1.login-class {
+    font-size: 20px;
+    background-color: rgb(77, 77, 212) !important;
+    line-height: 3.2;
+    padding: 10px;
+    color: white;
+}   
+
+.navbar.navbar-default {
+    background-color: black;
+    color: white;
+}
+
+.navbar-brand {
+    color: white;
+}
+
+.row {
+    padding: 10px;
+}
+
+.container {
+    max-width: 100% !important;
+    padding: 0;
+}
+
+.navbar {
+    padding: 1.5rem 1rem;
+}
