--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -8,7 +8,7 @@
 ul.navbar-nav {
     display: block;
 }
-ul.navbar-nav li {
+ul.navbar-nav li.not-for-dropdown {
     display: inline-block;
     vertical-align: top;
 }
