--- a/modules/styles/Register.css
+++ b/modules/styles/Register.css
@@ -22,7 +22,7 @@ hr {
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color: rgb(142, 175, 143);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
