--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -54,3 +54,27 @@ h1.login-class {
 .navbar {
     padding: 1.5rem 1rem;
 }
+
+.dropdown, .dropup {
+    position: absolute !important;
+}
+
+a.navbar-dropdown {
+    color: white !important;
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;;
+    
+}
+.dropdown-menu.show{
+    background-color: black !important;
+    padding: 10px;
+}
+
+.dropdown-list-options {
+    color: white;
+}
