--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -49,6 +49,8 @@ h1.login-class {
 .container {
     max-width: 100% !important;
     padding: 0;
+    /* min-height: 500px; */
+    height: auto;
 }
 
 .navbar {
@@ -67,7 +69,8 @@ a.navbar-dropdown {
     margin-right: 1rem;
     font-size: 1.25rem;
     line-height: inherit;
-    white-space: nowrap;;
+    white-space: nowrap;
+    text-decoration: none;
     
 }
 .dropdown-menu.show{
