--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -67,7 +67,8 @@ a.navbar-dropdown {
     margin-right: 1rem;
     font-size: 1.25rem;
     line-height: inherit;
-    white-space: nowrap;;
+    white-space: nowrap;
+    text-decoration: none;
     
 }
 .dropdown-menu.show{
