--- a/modules/styles/NavigationBar.css
+++ b/modules/styles/NavigationBar.css
@@ -71,11 +71,13 @@ a.navbar-dropdown {
     line-height: inherit;
     white-space: nowrap;
     text-decoration: none;
+   
     
 }
 .dropdown-menu.show{
     background-color: black !important;
     padding: 10px;
+    position: relative;
 }
 
 .dropdown-list-options {
